--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,14 @@ pipeline {
         jdk 'JDK 1.8'
     }  
     stages { 
+	stage ('Initialize') {
+            steps {
+                sh '''
+                    echo "PATH = ${PATH}"
+                    echo "M2_HOME = ${M2_HOME}"
+                '''
+            }
+        }
         stage('Build') { 
             steps { 
                echo 'This is a minimal pipeline.' 
