--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage('Build') { 
             steps { 
                	echo 'Build all modules with maven...'
-		sh 'mvn -f C:\TUTORIALS\JENKINS\EXAMPLES\TestCI_CD.git\spmia-chapter3-master clean install' 
+		sh 'mvn -f C:/TUTORIALS/JENKINS/EXAMPLES/TestCI_CD.git/spmia-chapter3-master clean install' 
             }
         }
     }
