--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline { 
-    agent any
+    agent {
+        label 'master'
+    }
     tools {
         maven 'Maven 3.8.5'
         jdk 'JDK 1.8'
