--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
 	stage('Deploy') {
 		when {
 			expression {
-				currentBuild.result == null || currentBuild.result == 'SUCCESS' ①
+				currentBuild.result == null || currentBuild.result == 'SUCCESS'
 			}
 		}
 		steps {
