aggiunta fase di deploy 2

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,6 +11,7 @@ pipeline {
             steps {
                 echo "PATH = ${PATH}"
                 echo "M2_HOME = ${M2_HOME}"
+		echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
             }
         }
         stage('Build') { 
@@ -31,5 +32,19 @@ pipeline {
 			echo "effettua il deploy con docker"
 		}
 	}
+	stage('Test_Docker') {
+            agent {
+                docker {
+                    image 'gradle:8.2.0-jdk17-alpine'
+                    // Run the container on the node specified at the
+                    // top-level of the Pipeline, in the same workspace,
+                    // rather than on a new node entirely:
+                    reuseNode true
+                }
+            }
+            steps {
+                sh 'gradle --version'
+            }
+        }
     }
 }
