--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,38 +1,32 @@
 pipeline { 
     agent any
-    //agent {
-    //    label 'master'
-    //}
+    agent {
+        label 'master'
+    }
     tools {
         maven 'Maven 3.8.5'
         jdk 'JDK 1.8'
     }  
     stages { 
 	stage ('Initialize') {
-	    agent {
-                label 'master'
-            }
-            steps {
+	    steps {
                 echo "PATH = ${PATH}"
                 echo "M2_HOME = ${M2_HOME}"
 		echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
             }
         }
         stage('Build') { 
-	    agent {
-                label 'master'
-            }
-            steps { 
-               	echo 'Build all modules with maven...'
-		dir('C:/TUTORIALS/JENKINS/EXAMPLES/TestCI_CD.git/spmia-chapter3-master') { // or absolute path
-      			bat 'mvn clean install'
+	    steps { 
+               	echo 'Build all modules with maven and build docker image...'
+		dir('C:/TUTORIALS/JENKINS/EXAMPLES/TestCI_CD.git/spmia-chapter3-master/licensing-service') { // or absolute path
+      			bat 'mvn clean install docker:build'
+    		}
+		dir('C:/TUTORIALS/JENKINS/EXAMPLES/TestCI_CD.git/spmia-chapter3-master/configurationserver') { // or absolute path
+      			bat 'mvn clean install docker:build'
     		}		 
             }
         }
 	stage('Deploy') {
-		agent {
-                	label 'master'
-            	}
 		when {
 			expression {
 				currentBuild.result == null || currentBuild.result == 'SUCCESS'
@@ -42,19 +36,5 @@ pipeline {
 			echo "effettua il deploy con docker"
 		}
 	}
-	stage('Test_Docker') {
-            agent {
-                docker {
-                    image 'openjdk:8-jdk-alpine'
-                    // Run the container on the node specified at the
-                    // top-level of the Pipeline, in the same workspace,
-                    // rather than on a new node entirely:
-                    reuseNode true
-                }
-            }
-            steps {
-                bat 'openjdk --version'
-            }
-        }
     }
 }
