aggiunta fase di deploy 8

--- a/spmia-chapter3-master/licensing-service/src/main/docker/Dockerfile
+++ b/spmia-chapter3-master/licensing-service/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.14
+FROM openjdk:8-alpine
 RUN  apk update && apk upgrade && apk add netcat-openbsd
 RUN mkdir -p /usr/local/licensingservice
 ADD @project.build.finalName@.jar /usr/local/licensingservice/
